# src/shared/routes.gen.js
@@ -26,6 +26,14 @@ export default { _word:
    { value: '/word/user/{userId}/search/{wordEntry}',
      actions: { get: ["admin"] },
      express: '/word/user/:userId/search/:wordEntry' },
+  _word_user__userId__nextWord:
+   { value: '/word/user/{userId}/nextWord',
+     actions: { put: ["admin"] },
+     express: '/word/user/:userId/nextWord' },
+  _word_user__userId__answers:
+   { value: '/word/user/{userId}/answers',
+     actions: { get: ["admin"] },
+     express: '/word/user/:userId/answers' },
   _word_file__fileId_:
    { value: '/word/file/{fileId}',
      actions: { get: ["read"], delete: ["admin"] },
